--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,7 +28,6 @@ Jinja2==3.1.3
 MarkupSafe==2.1.5
 oauth2client==4.1.3
 oauthlib==3.2.2
-pkg_resources==0.0.0
 proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.6.0
@@ -49,3 +48,4 @@ uritemplate==4.1.1
 urllib3==2.2.1
 Werkzeug==3.0.2
 zipp==3.18.1
+gunicorn==20.1.0
